# pepper_robot

./: README.md
pepper_apps/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
pepper_apps/launch/: alife.launch  behaviors.launch  footsteps.launch  laser.launch  leds.launch  speech.launch  tactile.launch  walker.launch
pepper_apps/nodes/: pepper_alife.py  pepper_behaviors.py  pepper_footsteps.py  pepper_leds.py  pepper_speech.py  pepper_tactile.py  pepper_walker.py
pepper_apps/src/pepper_apps/: pepper_footstep_clipping.py
pepper_bringup/launch/: behaviors.launch  pepper_full.launch
pepper_bringup/nodes/: Pepper_behaviors.py  pepper_walker.py
pepper_robot/: package.xml
